--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,27 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loginname_hint">用户名</string>
+    <string name="loginpassword_hint">密码</string>
+    <string name="login_button">登陆</string>
+    <string name="sign_button">注册</string>
+    <string name="logo_content">物料管理</string>
+    <string name="logoin_empty_hint">请输入用户名和密码</string>
+    <string name="logoin_success">登录成功</string>
+    <string name="logoin_fail">用户名或密码错误</string>
+    <string name="con_server_fail">网络连接错误</string>
+
+    <string name="tab_loading">入库</string>
+    <string name="tab_unloading">出库</string>
+    <string name="tab_distribution">配料</string>
+    <string name="tab_line">产线</string>
+    <string name="tab_set">设置</string>
+
+    <string name="printer_label">打印机标签选择</string>
+    <string name="printer_hander">手动打印标签</string>
+    <string name="printer_opt">打印机</string>
+
+    <string name="app_version">版本</string>
+    <string name="quit">退出登录</string>
+    <string name="other_opt">其他</string>
 </resources>
