--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MaterialManage</string>
+    <string name="mapp_name">MaterialManage</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -24,8 +24,10 @@
     <string name="printer_opt">打印机</string>
 
     <string name="app_version">版本</string>
+    <string name="update_data">更新数据</string>
     <string name="quit">退出登录</string>
     <string name="other_opt">其他</string>
+    <string name="data_opt">数据</string>
 
     <string name="search_title">搜索</string>
     <string name="add_title">添加列表</string>
@@ -37,4 +39,6 @@
     <string name="print">打印</string>
 
     <string name="no_record">没有记录</string>
+    <string name="reloading_title">换料扫描</string>
+
 </resources>
