--- a/zxingLibrary/src/main/res/values/strings.xml
+++ b/zxingLibrary/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">zxingLibrary</string>
     <string name="scan_right">条码正确</string>
     <string name="scan_wrong">条码错误</string>
+    <string name="scan_middle">条码正确，批次错误</string>
 </resources>
